[package]
authors = ["Felipe Coury <felipe.coury@gmail.com>"]
description = "A library for managing and executing tasks in a PostgreSQL-backed queue"
edition = "2021"
license = "MIT"
name = "postgres_queue"
readme = "README.md"
repository = "https://github.com/fcoury/postgres_queue"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.24", features = ["serde"]}
deadpool-postgres = {version = "0.10.5", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0.40"
tokio = {version = "1", features = ["full"]}
tokio-postgres = {version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"]}
url = "2.3.1"
